# nudgr

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_v1.py  0003_v2v3.py  0004_v2_5_pending.py
nudgr/: __init__.py  __main__.py  auth.py  bot.py  cli.py  config.py  doctor.py  i18n.py  invites.py  parser.py  pending.py  quiet.py  recurrence.py  scheduler.py  summary.py  transcribe.py
nudgr/db/: models.py  session.py
nudgr/llm/: router.py
nudgr/llm/prompts/: parse_intent.py
nudgr/observability/: logging.py
tests/: conftest.py  test_config.py  test_i18n.py  test_invites.py  test_open_registration.py  test_parser.py  test_pending_prompt.py  test_quiet.py  test_recurrence.py
