[project]
name = "nudgr"
version = "0.1.0"
description = "Voice-first Telegram reminder bot that nudges until done"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "typer>=0.12",
    "rich>=13.7",
    "loguru>=0.7",
    "httpx>=0.27",
    "anyio>=4.4",
    # DB
    "sqlalchemy>=2.0.35",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    # LLM
    "anthropic>=0.37",
    "openai>=1.50",
    # Messaging
    "aiogram>=3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "freezegun>=1.5",
    "ruff>=0.6",
]

[project.scripts]
nudgr = "nudgr.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nudgr"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
